<resources>
    <string name="app_name">SuperHeroes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nombre_real">Nombre Real:</string>
    <string name="fuerza">Fuerza</string>
    <string name="strengh">Strengh</string>
    <string name="intelligence">Intelligence</string>
    <string name="speed">Speed</string>
    <string name="durability">Durability</string>
    <string name="power">Power</string>
    <string name="combat">Combat</string>
    <string name="desconocido">Unknown</string>
    <string name="aqui_va_el_nombre">Aqui va el nombre</string>
</resources>